# mc-status

./: .env.example  Makefile  README.md  main.py  pyproject.toml  requirements.txt
static/css/: style.css
templates/: 404.html  422.html  500.html  index.html
