[tool.poetry]
name = "minecraft-status"
version = "0.1.0"
description = ""
authors = ["timelessnesses <mooping3roblox@gmail.com>"]
readme = "README.md"
packages = [{include = "minecraft_status"}]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.89.1"
mcstatus = "^10.0.1"
jinja2 = "^3.1.2"
types-jinja2 = "^2.11.9"
python-dotenv = "^0.21.1"
uvicorn = "^0.20.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
